fix padding to new scrollbar size

--- a/view/src/Chat/ChatBox/index.module.css
+++ b/view/src/Chat/ChatBox/index.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column-reverse;
   padding: 32px 0;
-  padding-right: 6px;
+  padding-right: 2px;
 }
 
 .chat .container:hover {
